--- a/static/style.css
+++ b/static/style.css
@@ -10,9 +10,9 @@ nav{
 
 }
 
-#node{
-    height: 300px;
-    width: 600px;
+.node{
+    height: 250px;
+    width: 800px;
     margin: auto;
     margin-top: 50px;
     background-color: rgb(255, 222, 122);
@@ -21,12 +21,14 @@ nav{
     transition: all 0.5s;
 }
 
-#node:hover{
+.node:hover{
     cursor: pointer;
-    transform: scale(1.1);
+    background-color: rgb(255, 214, 89);
 }
 
-#node h2{
+
+
+.node h2{
     padding-top: 20px;
     margin-left: 40px;
     font-size: 25px;
