--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,14 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link href="../static/style.css" rel="stylesheet" type="text/css">
         <title>Events Locator</title>
+        <script>
+            // var nodes = document.getElementsByClassName("node");
+            // console.log(nodes);
+            // for(var i = 0 ; i < nodes.length; i++){
+            //     nodes[i].setAttribute("open", false);
+            //     // nodes[i].addEventListener("mouseover", hover);
+            // }
+        </script>
     </head>
     <body>
         <nav class="navbar navbar-light bg-white align-items-center container-fluid" style="height: 80px; position: fixed; top: 0;">
@@ -16,30 +24,58 @@
                     Sort By
                   </button>
                   <ul class="dropdown-menu" style="position: absolute;">
-                    <li><a class="dropdown-item" href="#">Date</a></li>
-                    <li><a class="dropdown-item" href="#">Name</a></li>
-                    <li><a class="dropdown-item" href="#">Distance</a></li>
+                    <li><a class="dropdown-item" href="#">Date (Closest)</a></li>
+                    <li><a class="dropdown-item" href="#">Date (Furthest)</a></li>
+                    <li><a class="dropdown-item" href="#">Name (Ascending)</a></li>
+                    <li><a class="dropdown-item" href="#">Name (Descending)</a></li>
                   </ul>
+                  <a style="text-decoration: none; margin-right: 10px;" href="/addevents"><button class="btn btn-warning topcustom" style="width: 150px;">Add an Event</button></a> 
                 
-                <a style="text-decoration: none" href="/login"><button class="btn btn-warning topcustom" style="width: 100px;">Sign In</button></a> 
             </div>
         </nav>
 
-        <div id="node" style="margin-top: 120px;">
+        <div class="node" style="margin-top: 120px;" onclick="expand(this)">
             <h2>Eating Competition</h2>
         </div>
 
-        <div id="node">
+        <div class="node" onclick="expand(this)">
             <h2>Eating Competition</h2>
         </div>
 
-        <div id="node">
+        <div class="node" onclick="expand(this)">
             <h2>Eating Competition</h2>
         </div>
 
-        <div id="node" style="margin-bottom: 50px;">
+        <div class="node" style="margin-bottom: 50px;" onclick="expand(this)">
             <h2>Eating Competition</h2>
         </div>
+
+
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+        <script>
+            
+
+            const expand = (thing) =>{
+                console.log("CLICKEDD");
+                if(thing.open != true){
+                    thing.open = true;
+                    thing.style.transform = "scale(1.5)";
+                }
+                else{
+                    thing.open = false;
+                    thing.style.transform = "initial";
+            
+                }
+                
+            }
+
+        
+
+        </script>
+
     </body>
+    <footer>
+        <a style="text-decoration: none; display: block; margin: auto; margin-left: calc(50% - 50px); margin-bottom: 30px;" href="/login">Admin Sign In</a> 
+    </footer>
 </html>
