--- a/static/style.css
+++ b/static/style.css
@@ -24,7 +24,10 @@ nav{
 .node:hover{
     cursor: pointer;
     background-color: rgb(255, 214, 89);
+    transform: scale(1.5);
+    border: 4px solid rgb(10,10,10);
 }
+
 
 
 
