--- a/templates/add.html
+++ b/templates/add.html
@@ -6,20 +6,64 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link href="../static/style.css" rel="stylesheet" type="text/css">
         <title>Events Locator</title>
-
-
-        <link href="../static/signin.css" rel="stylesheet">
+        
 
     
     </head>
     <body style="position: relative;">
-        <nav class="navbar navbar-light bg-white align-items-center container-fluid" style="height: 80px; position: fixed; top: 0;">
+        <nav class="navbar navbar-light bg-white align-items-center container-fluid" style="height: 80px; top: 0;">
             <!-- Navbar content -->
             <a href="/" style="text-decoration: none; margin-left: 50px;"><h1 class="text-dark">ADD EVENTS</h1></a>
             <div class="float-md-end me-5">
                 <a style="text-decoration: none; margin-right: 10px;" href="/"><button class="btn btn-outline-warning topcustom" style="width: 100px;">Go Back</button></a> 
             </div>
         </nav>
+        
+        <form class="jotform-form" action="/adding" method="POST" name="" style="margin-top: 50px;">
+            <div style="display: flex; margin: auto; width: 60%; justify-content:space-between">
+                <div style="width: 45%;">
+                    <label for="formGroupExampleInput" class="form-label">Event Name</label>
+                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Name of Event" name="name">
+                </div>
+                <div style="width: 45%;">
+                    <label class="form-label">Event Date</label>
+                    <input type="datetime-local" class="form-control" name="date">
+                </div>
+            </div>
+
+            <div style="display: flex; margin: auto; width: 60%; justify-content:space-between; margin-top: 20px;">
+                <div style="width: 45%;">
+                    <label for="formGroupExampleInput" class="form-label">Adress</label>
+                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Eg. 85 Pickle Road" name="adress">
+                </div>
+                <div style="width: 45%;">
+                    <label for="formGroupExampleInput" class="form-label">City</label>
+                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="City of Event" name="city">
+                </div>
+            </div>
+
+            <div style="display: flex; margin: auto; width: 60%; justify-content:space-between; margin-top: 20px;">
+                <div style="width: 45%;">
+                    <label for="formGroupExampleInput" class="form-label">Link</label>
+                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Link for the Event" name="link">
+                </div>
+                <div style="width: 45%;">
+                    <label for="formGroupExampleInput" class="form-label">Tags</label>
+                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Hashtags" name="tags">
+                </div>
+            </div>
+            <div style="height:20px"></div>
+            <div style="width: 60%;margin: auto;">
+                <label for="exampleFormControlTextarea1" class="form-label">Event Description</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Description of the Event..." name="description"></textarea>
+            </div>
+            
+
+            <div style="height:20px"></div>
+
+            <button class="btn btn-lg btn-warning" type="submit" style="width: 60%; display: block; margin: auto;">Submit</button>
+            
+        </form>
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
