--- a/templates/index.html
+++ b/templates/index.html
@@ -26,8 +26,8 @@
                   <ul class="dropdown-menu" style="position: absolute;">
                     <li><a class="dropdown-item" href="#" >Date (Closest)</a></li>
                     <li><a class="dropdown-item" href="#">Date (Furthest)</a></li>
-                    <li><a class="dropdown-item" href="{{ url_for('alpha1') }}" >Name (Ascending)</a></li>
-                    <li><a class="dropdown-item" href="{{ url_for('alpha2') }}" >Name (Descending)</a></li>
+                    <li><a class="dropdown-item" href="/alpha1" >Name (Ascending)</a></li>
+                    <li><a class="dropdown-item" href="/alpha2" >Name (Descending)</a></li>
                   </ul>
                   <a style="text-decoration: none; margin-right: 10px;" href="/addevents"><button class="btn btn-warning topcustom" style="width: 150px;">Add an Event</button></a> 
                 
@@ -58,14 +58,35 @@
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-        <script>
-            
+        <!-- <script>
+
+            const resetall = () => {
+                let nodes = document.getElementsByClassName("node");
+                for(var i = 0; i < nodes.length; i++){
+                    nodes[i].open = false;
+                    nodes[i].style.transform = "initial";
+                }
+            }
+
+            const getdown = (thing1) =>{
+                
+                let nodes = document.getElementsByClassName("node");
+                for(var i = 0; i < nodes.length; i++){
+                    if(nodes[i] != thing1){
+                        nodes[i].open = false;
+                        nodes[i].style.transform = "initial";
+                        console.log("CALLEDDD");
+                    }
+                }
+                thing1.open = true;
+                thing1.style.transform = "scale(1.5)";
+                console.log("CALed NOW");
+            }
 
             const expand = (thing) =>{
                 console.log("CLICKEDD");
                 if(thing.open != true){
-                    thing.open = true;
-                    thing.style.transform = "scale(1.5)";
+                    getdown(thing);
                 }
                 else{
                     thing.open = false;
@@ -77,7 +98,7 @@
 
         
 
-        </script>
+        </script> -->
 
     </body>
     <footer>
