--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
             <br>
             <br>
             {% for event in eventsdb %}
-            <div class="node" style="margin-top: 25px;" onclick="expand(this)">
+            <div class="node nodefront" style="margin-top: 25px;" onclick="expand(this)">
                 <h2>{{event[0]}} - {{event[1]}}</h2>
                 <div style="margin-left: 40px;">
                     <p>{{event[2]}}</p>
