--- a/static/style.css
+++ b/static/style.css
@@ -21,7 +21,8 @@ nav{
     transition: all 0.5s;
 }
 
-.node:hover{
+
+.nodefront:hover{
     cursor: pointer;
     background-color: rgb(255, 214, 89);
     transform: scale(1.5);
