--- a/templates/add.html
+++ b/templates/add.html
@@ -33,8 +33,8 @@
 
             <div style="display: flex; margin: auto; width: 60%; justify-content:space-between; margin-top: 20px;">
                 <div style="width: 45%;">
-                    <label for="formGroupExampleInput" class="form-label">Adress</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Eg. 85 Pickle Road" name="adress">
+                    <label for="formGroupExampleInput" class="form-label">Address</label>
+                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Eg. 85 Pickle Road" name="address">
                 </div>
                 <div style="width: 45%;">
                     <label for="formGroupExampleInput" class="form-label">City</label>
