--- a/templates/admin.html
+++ b/templates/admin.html
@@ -7,20 +7,54 @@
         <link href="../static/style.css" rel="stylesheet" type="text/css">
         <title>Events Locator</title>
 
-
-        <link href="../static/signin.css" rel="stylesheet">
-
     
     </head>
     <body style="position: relative;">
-        <nav class="navbar navbar-light bg-white align-items-center container-fluid" style="height: 80px; position: fixed; top: 0;">
+        <nav class="navbar navbar-light bg-white align-items-center container-fluid" style="height: 80px; position: fixed; top: 0; z-index: 2;">
             <!-- Navbar content -->
-            <a href="/" style="text-decoration: none; margin-left: 50px;"><h1 class="text-dark">EVENTS</h1></a>
+            <a href="/" style="text-decoration: none; margin-left: 50px;"><h1 class="text-dark">ADMING PANEL</h1></a>
             <div class="float-md-end me-5">
                 <a style="text-decoration: none; margin-right: 10px;" href="/login"><button class="btn btn-outline-warning topcustom" style="width: 100px;">Logout</button></a> 
             </div>
         </nav>
 
+        <div style="height: 100px;"></div>
+        
+        <div class="node" style="margin-top: 25px; position: relative">
+            <a href="/" style="position: absolute; margin-top: 100px; margin-left: -60px;"><img src="https://img.icons8.com/fluent/96/000000/close-window.png" style="width: 50px;"/></a>
+            <a href="/" style="position: absolute; margin-top: 100px; margin-left: 810px; float: right; display: block;"><img src="https://img.icons8.com/flat-round/64/000000/checkmark.png" style="width: 50px;"/></a>
+            <h2>HIII</h2>
+            <div style="margin-left: 40px;">
+                <p>HIII</p>
+                <p>HIII</p>
+                <p>HIII</p>
+                <p>HIII</p>
+            </div>
+        </div>
+
+        <div class="node" style="margin-top: 25px; position: relative">
+            <a href="/" style="position: absolute; margin-top: 100px; margin-left: -60px;"><img src="https://img.icons8.com/fluent/96/000000/close-window.png" style="width: 50px;"/></a>
+            <a href="/" style="position: absolute; margin-top: 100px; margin-left: 810px; float: right; display: block;"><img src="https://img.icons8.com/flat-round/64/000000/checkmark.png" style="width: 50px;"/></a>
+            <h2>HIII</h2>
+            <div style="margin-left: 40px;">
+                <p>HIII</p>
+                <p>HIII</p>
+                <p>HIII</p>
+                <p>HIII</p>
+            </div>
+        </div>
+
+        <div class="node" style="margin-top: 25px; position: relative">
+            <a href="/" style="position: absolute; margin-top: 100px; margin-left: -60px;"><img src="https://img.icons8.com/fluent/96/000000/close-window.png" style="width: 50px;"/></a>
+            <a href="/" style="position: absolute; margin-top: 100px; margin-left: 810px; float: right; display: block;"><img src="https://img.icons8.com/flat-round/64/000000/checkmark.png" style="width: 50px;"/></a>
+            <h2>HIII</h2>
+            <div style="margin-left: 40px;">
+                <p>HIII</p>
+                <p>HIII</p>
+                <p>HIII</p>
+                <p>HIII</p>
+            </div>
+        </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     </body>
