some work on admin

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,6 +46,7 @@
                     <p>{{event[2]}}</p>
                     <p>{{event[3]}}</p>
                     <br>
+                    <br>
                     <p>
                         {{event[4]}}
                         <br>
@@ -53,6 +54,7 @@
                     </p>
                 </div>
             </div>
+            <img src="">
             {% endfor %}
         </div>
     
