--- a/templates/index.html
+++ b/templates/index.html
@@ -32,35 +32,32 @@
                   <a style="text-decoration: none; margin-right: 10px;" href="/addevents"><button class="btn btn-warning topcustom" style="width: 150px;">Add an Event</button></a> 
                 
             </div>
-        </nav>
-
+        </nav>  
+        
+    
         <div> <!-- List of events -->
             <br>
             <br>
             <br>
             <br>
-            {% for event in eventsdb %}
+            {% for i in range(lstlen) %}
             <div class="node nodefront" style="margin-top: 25px;" onclick="expand(this)">
-                <h2>{{event[0]}} - {{event[1]}}</h2>
+                <h2>{{eventsdb[i][0]}} - {{datelst[i]}}</h2>
                 <div style="margin-left: 40px;">
-                    <p>{{event[2]}}</p>
-                    <p>{{event[3]}}</p>
+                    <p>{{eventsdb[i][2]}}</p>
+                    <p>{{eventsdb[i][3]}}</p>
                     <br>
                     <br>
                     <p>
-                        {{event[4]}}
+                        {{eventsdb[i][4]}}
                         <br>
-                        {{event[5]}}
+                        {{eventsdb[i][5]}}
                     </p>
                 </div>
             </div>
-            <img src="">
+            <!-- <img src=""> -->
             {% endfor %}
         </div>
-    
-
-    
-
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
