--- a/templates/index.html
+++ b/templates/index.html
@@ -44,14 +44,10 @@
                 <h2>{{event[0]}} - {{event[1]}}</h2>
                 <div style="margin-left: 40px;">
                     <p>{{event[2]}}</p>
-                    <p>{{event[3]}}</p>
-                    <br>
-                    <br>
-                    <p>
-                        {{event[4]}}
-                        <br>
-                        {{event[5]}}
-                    </p>
+                    <p style="width: 85%">{{event[3]}}</p>
+                    <p>{{event[4]}}</p>
+                    <p style="margin-top: -10px;">{{event[5]}}</p>
+                   
                 </div>
             </div>
             <img src="">
