--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
     <body style="position: relative;">
         <nav class="navbar navbar-light bg-white align-items-center container-fluid" style="height: 80px; position: fixed; top: 0;">
             <!-- Navbar content -->
-            <a href="/" style="text-decoration: none; margin-left: 50px;"><h1 class="text-dark">EVENTS</h1></a>
+            <a href="/" style="text-decoration: none; margin-left: 50px;"><h1 class="text-warning fw-bold">LOGIN</h1></a>
 
                 
         
