--- a/templates/add.html
+++ b/templates/add.html
@@ -13,7 +13,7 @@
     <body style="position: relative;">
         <nav class="navbar navbar-light bg-white align-items-center container-fluid" style="height: 80px; top: 0;">
             <!-- Navbar content -->
-            <a href="/" style="text-decoration: none; margin-left: 50px;"><h1 class="text-dark">ADD EVENTS</h1></a>
+            <a href="/" style="text-decoration: none; margin-left: 50px;"><h1 class="text-warning fw-bold">ADD EVENTS</h1></a>
             <div class="float-md-end me-5">
                 <a style="text-decoration: none; margin-right: 10px;" href="/"><button class="btn btn-outline-warning topcustom" style="width: 100px;">Go Back</button></a> 
             </div>
